Fixed dropdown menu from flickering on hover on smaller screen widths - onHover now applies to .dropdown-content as a child of .header:hover and .header no longer assigned its own width

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -232,7 +232,6 @@ svg {
 
 .header {
   display: flex;
-  width: 75%;
   justify-content: space-evenly;
   align-items: flex-end;
   position: relative;
@@ -263,7 +262,7 @@ svg {
     .header .dropdown-content .subHeading:hover {
       color: #E94F37; }
 
-.headContainer:hover + .dropdown-content, .dropdown-content:hover {
+.header:hover .dropdown-content {
   display: block;
   opacity: 1;
   top: 8rem;
@@ -366,7 +365,7 @@ svg {
   .country.noData .countryBody {
     margin-top: 1rem;
     margin-bottom: 2rem; }
-  .headContainer:hover + .dropdown-content {
+  .header:hover .dropdown-content {
     top: 6rem; }
   @keyframes barDown {
     0% {
@@ -391,7 +390,7 @@ svg {
   .country.noData .countryBody {
     margin-top: 1rem;
     margin-bottom: 2rem; }
-  .headContainer:hover + .dropdown-content {
+  .header:hover .dropdown-content {
     top: 4.75rem; }
   @keyframes barDown {
     0% {
@@ -464,7 +463,7 @@ svg {
         width: 30vw; }
   .header .headContainer {
     padding-top: 1rem; }
-  .headContainer:hover + .dropdown-content {
+  .header:hover .dropdown-content {
     top: 3rem; }
   @keyframes barDown {
     0% {
@@ -496,7 +495,7 @@ svg {
     font-size: 1.5rem; }
   body .subHeading, body .asideHeading {
     font-size: 1rem; }
-  body .headContainer:hover + .dropdown-content {
+  body .header:hover .dropdown-content {
     top: 2.5rem; }
   @keyframes barDown {
     0% {
