--- a/src/styles/scss/_header.scss
+++ b/src/styles/scss/_header.scss
@@ -4,7 +4,6 @@
 
 .header {
     display: flex;
-    width: 75%;
     justify-content: space-evenly;
     align-items: flex-end;
     position: relative;
@@ -44,7 +43,7 @@
     }
 }
 
-.headContainer:hover + .dropdown-content, .dropdown-content:hover {
+.header:hover .dropdown-content {
         display: block;
         opacity: 1;
         top: 8rem;
